fix: overflow issue

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,11 +3,11 @@
 
 .header {
   background: $white;
+  @include padding(0);
 
   .header-animate {
     text-align: center;
     position: fixed;
-    width: 100%;
     left: 50%;
     transform: translateX(-50%);
   }
@@ -25,6 +25,7 @@
 
   h1 {
     @include fontsize(10);
+    white-space: nowrap ;
     text-transform: uppercase;
     color: $black;
     display: inline-block;
@@ -78,9 +79,6 @@
 
 @media screen and (max-width: 1000px) {
   .header {
-    padding-left: 0;
-    text-align: center;
-
     .social {
       margin: 0;
     }
@@ -90,10 +88,12 @@
 
 @media screen and (max-width: 800px) {
   .header {
-    grid-template-columns: 1fr;
 
     h1 {
       @include fontsize(10);
+      &::after {
+        bottom: 0;
+      }
     }
 
     .subtitle, .social {
@@ -104,7 +104,6 @@
 
 @media screen and (max-width: 600px) {
   .header {
-    padding: 20px;
 
     h1 {
       @include fontsize(4);
